--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,9 @@ description: "This is my portfolio which showcases the work that I have done, al
 baseurl: ""
 url: "http://yourdomain.com"
 linkedin_username: lnunno
-github_username:  lnunno
+github_username:   lnunno
+
+social_badge_size: "2x"
 
 # Build settings
 markdown: kramdown
