Moved posts to pages

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Lucas Nunno's Portfolio Site
 email: lnunno@cs.unm.edu
 description: "This is my portfolio which showcases the work that I have done, along with descriptions of my software engineering philosophy."
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http://lnunno.github.io"
 linkedin_username: lnunno
 github_username:   lnunno
 
