--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Lucas Nunno's Portfolio Site
+title: Lucas Nunno
 email: lnunno@cs.unm.edu
 description: "This is my portfolio which showcases the work that I have done, along with descriptions of my software engineering philosophy."
 baseurl: ""
