Have some example work.

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title: Lucas Nunno
 email: lnunno@cs.unm.edu
 description: "This is my portfolio which showcases the work that I have done, along with descriptions of my software engineering philosophy."
 baseurl: ""
+imageurl: "/assets/images"
+docurl: "/assets/docs"
 url: "http://lnunno.github.io"
 linkedin_username: lnunno
 github_username:   lnunno
