Cleanup content and fix text being too big.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,31 @@
-root = true
+# EditorConfig is awesome: http://EditorConfig.org
 
+# Sensible defaults, can be overriden by file extension below.
 [*]
+end_of_line = lf
+insert_final_newline = true
+charset = utf-8
 indent_style = space
 indent_size = 4
+trim_trailing_whitespace = true
 
-[*.html]
+# Special case for Makefiles since they are tab-delimited
+[Makefile]
+indent_style = tab
+
+[*.tsv]
+indent_style = tab
+
+# This complies with gofmt
+[*.go]
+indent_style = tab
+
+[*.{yml,yaml,xml,json}]
 indent_size = 2
+
+[*.{js,jsx,ts,tsx}]
+indent_size = 2
+
+# Python style
+[*.py]
+indent_size = 4
